# Ackerbot

./: .gitignore  README.md  requirements.txt
ackerbot_sim_ws/src/rl-navigation/navigation_train/: CMakeLists.txt  package.xml
ackerbot_sim_ws/src/rl-navigation/navigation_train/data/: data_frame_test_runs.pkl
ackerbot_sim_ws/src/rl-navigation/navigation_train/data/val_traj_backward/: data.npy
ackerbot_sim_ws/src/rl-navigation/navigation_train/data/val_traj_forward/: data.npy
ackerbot_sim_ws/src/rl-navigation/navigation_train/launch/: train.launch
ackerbot_sim_ws/src/rl-navigation/navigation_train/scripts/: Experiments.ipynb  Inference.ipynb  Training.ipynb  Training_custom.ipynb  train.py
ackerbot_sim_ws/src/rl-scouting/scouting_train/: package.xml
ackerbot_sim_ws/src/rl-scouting/scouting_train/data/: data_frame_runs.pkl  obs_learning.npy  runs_val_dist_to_target_d1.npy  runs_val_dist_to_target_d2.npy
ackerbot_sim_ws/src/rl-scouting/scouting_train/data/train_runs_backward/: data.npy
ackerbot_sim_ws/src/rl-scouting/scouting_train/data/train_traj_backward/: data.npy
ackerbot_sim_ws/src/rl-scouting/scouting_train/data/val_runs_backward/: data.npy
ackerbot_sim_ws/src/rl-scouting/scouting_train/data/val_runs_forward/: data.npy
ackerbot_sim_ws/src/rl-scouting/scouting_train/scripts/: Experiments.ipynb  Inference.ipynb  Training.ipynb  drive_control_vis.py  images_to_video.py  inference.ipynb  inference_sim.ipynb  target_distribution_real.ipynb  target_distribution_real.py  trainer.ipynb  trainer2.ipynb  trajectory_reader.py
rl_ws/: q_learning.ipynb
(+665 files in other folders)
