<?xml version="1.0"?>
<package format="2">
  <name>navigation_train</name>
  <version>0.0.0</version>
  <description>The navigation_train package</description>

  <maintainer email="todo@todo.com">HP</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>navigation_gym</build_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>navigation_gym</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
